#4 validation du formulaire + message + correction de la fonction getAge

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -184,9 +184,9 @@ main {
   margin: 15px auto;
 }
 
-/* #validation-message {
+#validation-message {
   display: none;
-} */
+}
 
 label {
   font-family: var(--font-default);
